# Fertpy

./: .gitignore  AUTHORS.md  LICENSE  README.md  README.pt-BR.md  __init__.py  pyproject.toml
core/domain/: classe.py  criterio.py  intervalo.py  modelo_agronomico.py  recomendacao.py
core/engine/: avaliador.py  calculo_calagem.py
correcao_solo/: __init__.py  calagem.py
infra/loaders/: yaml_loader.py
infra/parsing/: condicao.py  intervalo.py  modelo_agronomico.py
knowledge/boletim_100/: calagem.yaml
knowledge/boletim_100/calagem/: milho.yaml
knowledge/boletim_100/milho/: milho_graos_fosforo.yaml  milho_graos_nitrogenio.yaml  milho_graos_potassio.yaml  milho_silagem_fosforo.yaml  milho_silagem_nitrogenio.yaml  milho_silagem_potassio.yaml
nutrientes/: __init__.py  fosforo.py  nitrogenio.py  potassio.py
src/fertpy/: __init__.py
src/fertpy/cli/: main.py
src/fertpy/cli/argumentos/: formular_args.py  nutrientes_args.py
src/fertpy/cli/comandos/: formular.py  nutrientes.py
src/fertpy/cli/utils/: parametros_cli.py
src/fertpy/core/analysis/: diagnostico_formulacao.py  nutriente_limitante.py  proporcao.py
src/fertpy/core/domain/: calagem_model.py  classe.py  corretivo_solo.py  criterio.py  exceptions.py  fertilizante.py  modelo_agronomico.py  recomendacao.py
src/fertpy/core/engine/: avaliador.py  calculo_calagem.py  formulacao_adubacao.py  formulacao_calagem.py  nutriente_fornecido.py
src/fertpy/core/factories/: criador_corretivo.py  criador_fertilizante.py
src/fertpy/correcao_solo/: calagem.py
src/fertpy/formulacao/: adubacao.py  calagem.py  fornecimento.py  proporcao.py
src/fertpy/infra/loaders/: adubacao_loader.py  correcao_loader.py  (+1 more)
src/fertpy/nutrientes/: fosforo.py  nitrogenio.py  potassio.py
src/fertpy/services/: validacao_parametros.py
tests/: test_calagem.py  test_formulacao_cenarios.py  test_formulacao_erros.py  test_fosforo.py  test_nitrogenio.py  test_nutrientes_fornecidos.py  test_potassio.py
tests/knowledge/: calagem.yaml  formulacao_cenarios_adubacao.yaml  formulacao_cenarios_calagem.yaml  fosforo.yaml  nitrogenio.yaml  nutrientes_fornecidos.yaml  potassio.yaml
utils/: parametros.py
(+23 files in other folders)
